<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.app.presentation.address.AddNewAddressActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/back_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            layout="@layout/layout_back_save_white_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <RelativeLayout
            android:id="@+id/rl_default_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/back_layout">

            <CheckBox
                android:id="@+id/cb_default_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_add"
                android:gravity="center_vertical"
                app:tint="@color/dark_gray" />

            <TextView
                android:id="@+id/tv_default_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/cb_default_address"
                android:textColor="@color/palattes_1"
                android:text="@string/default_address"
                android:fontFamily="@font/sf_pro_text_regular"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/rl_default_address"
            android:background="@color/white">

            <TextView
                android:id="@+id/fullNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_label"
                android:textColor="@color/palattes_1"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/sf_pro_text_regular"/>

            <EditText
                android:id="@+id/fullNameEdt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_edt_radius_pressed"
                android:hint="@string/full_name_edt_hint"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry"
                android:fontFamily="@font/sf_pro_text_regular"/>

            <TextView
                android:id="@+id/phoneNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_label"
                android:textColor="@color/palattes_1"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/sf_pro_text_regular"/>

            <EditText
                android:id="@+id/phoneNumberEdt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_edt_radius_pressed"
                android:hint="@string/phone_number_edt_hint"
                android:paddingStart="10dp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@id/user_info_background"
                app:layout_constraintStart_toStartOf="@id/user_info_background"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberLabel"
                tools:ignore="RtlSymmetry,TextFields"
                android:fontFamily="@font/sf_pro_text_regular"/>

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textColor="@color/palattes_1"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/sf_pro_text_regular"/>

            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_edt_radius_pressed"
                android:hint="@string/email_edt_hint"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry"
                android:fontFamily="@font/sf_pro_text_regular"/>

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:text="@string/address_label"
                android:textColor="@color/palattes_1"
                android:textSize="15sp"
                android:fontFamily="@font/sf_pro_text_regular"
                app:layout_constraintTop_toBottomOf="@id/ll_dob_gender"
                app:layout_constraintStart_toStartOf="@id/relative_layout_address_register" />

            <RelativeLayout
                android:id="@+id/rl_address_choose"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <EditText
                    android:id="@+id/addressEdt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="40dp"
                    android:singleLine="true"
                    android:lines="1"
                    android:focusableInTouchMode="true"
                    android:background="@drawable/bg_edt_radius_pressed"
                    android:hint="@string/address_edt_hint"
                    tools:ignore="RtlSymmetry"
                    android:fontFamily="@font/sf_pro_text_regular"/>

                <ImageView
                    android:id="@+id/arrowChooseAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_arrow_forward"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>