<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.app.presentation.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/palattes_3">

        <include
            android:id="@+id/back_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            layout="@layout/layout_back_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp" />

        <ImageView
            android:id="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/usernameLabel"
            app:layout_constraintBottom_toTopOf="@id/usernameEdt"
            app:layout_constraintStart_toStartOf="@id/usernameEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/username_label"
            android:textColor="@color/palattes_1"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/usernameEdt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            tools:ignore="RtlSymmetry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/bg_edt_radius"
            android:hint="@string/username_edt_hint"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/passwordLabel"
            app:layout_constraintBottom_toTopOf="@id/passwordEdt"
            app:layout_constraintStart_toStartOf="@id/passwordEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/password_label"
            android:textColor="@color/palattes_1"
            android:textSize="15sp"
            android:fontFamily="@font/sf_pro_text_regular"/>

        <EditText
            android:id="@+id/passwordEdt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameEdt"
            tools:ignore="RtlSymmetry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/bg_edt_radius"
            android:hint="@string/password_edt_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/forgotPasswordBtn"
            app:layout_constraintStart_toStartOf="@id/passwordEdt"
            app:layout_constraintTop_toBottomOf="@id/passwordEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/palattes_2"
            android:textSize="15sp"
            android:fontFamily="@font/sf_pro_text_medium"/>

        <TextView
            android:id="@+id/signUpBtn"
            app:layout_constraintEnd_toEndOf="@id/passwordEdt"
            app:layout_constraintTop_toBottomOf="@id/passwordEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/sign_up_"
            android:textColor="@color/palattes_1"
            android:textSize="15sp"
            android:fontFamily="@font/sf_pro_text_medium"/>

        <TextView
            android:id="@+id/signInBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpBtn"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_sign_in_btn"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="@font/sf_pro_text_bold"/>

        <include layout="@layout/layout_or"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/signInBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/termsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Sign in means you agree to our\nTerm of Use"
            android:fontFamily="@font/sf_pro_text_regular"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


